--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple rest api for todo application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "docs": "node swagger.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
-    "mongoose": "^5.13.5"
+    "fs": "0.0.1-security",
+    "mongoose": "^5.13.5",
+    "swagger-jsdoc": "^6.1.0"
+  },
+  "devDependencies": {
+    "swagger-ui-express": "^4.1.6"
   }
 }
